# samvad

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  blog-post-signed-rate-limited-agent.md  blog-post-why-not-mcp-or-a2a.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  protocol_change.md
.github/workflows/: ci.yml
docs/: faq.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/integrations/: langchain.md  openclaw.md
docs/protocol/: agent-card.mdx  communication-modes.mdx  discovery.mdx  error-codes.mdx  message-format.mdx  overview.mdx
docs/sdk/: building-agents.mdx  calling-agents.mdx  delegation.mdx  overview.mdx
docs/security/: access-control.mdx  model.mdx
docs/superpowers/plans/: 2026-04-11-llm-injection-classifier.md
examples/basic-agent-py/: README.md  main.py  pyproject.toml
examples/basic-agent-ts/: index.ts  package.json
examples/debate-demo/: critic.ts  demo-chat.html  demo.tape  package.json  record-chat.ts  record-demo.sh  researcher.ts  run-demo.ts  tsconfig.json
examples/demo-agent-ts/: Dockerfile  fly.toml  index.ts  package.json
schema/v1.1/: agent-card.schema.json  request-envelope.schema.json  response-envelope.schema.json  task-status.schema.json
schema/v1.2/: agent-card.schema.json  request-envelope.schema.json  response-envelope.schema.json  task-status.schema.json
spec/: protocol-v1.1.md  protocol-v1.2.md
spec/test-vectors/: README.md  generate.mts  vectors.json
(+3 files in other folders)
